fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -182,7 +182,7 @@ body {
 	font-size: var(--fs-xxxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	height: 10em;
+	height: 3em;
 	width: 14em;
 	display: block;
 	color: var(--color-dark-brown1);
@@ -223,7 +223,7 @@ body {
 
 @media (min-width: 800px) {
 	.homepage-title {
-		width: 11em;
+		width: 12em;
 	}
 	
 	.homepage-description{
